--- a/Software/IceFlow/IceFlow.vcxproj.filters
+++ b/Software/IceFlow/IceFlow.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="src\DisplayManager\Gui\Icons\OpenDoorIcon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\OvenController\OvenEnums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DisplayManager\DisplayManager.cpp">
