--- a/Software/IceFlow/IceFlow/IceFlow.vcxproj.filters
+++ b/Software/IceFlow/IceFlow/IceFlow.vcxproj.filters
@@ -147,6 +147,12 @@
     <ClInclude Include="src\Screens\Panels\Icons\SettingsIcon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Screens\Widgets\PopUpMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Screens\Widgets\PopUpMenuDto.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DisplayManager\DisplayManager.cpp">
@@ -183,6 +189,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Screens\Panels\Icons\SettingsIcon.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Screens\Widgets\PopUpMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
