--- a/Software/IceFlow/IceFlow/IceFlow.vcxproj
+++ b/Software/IceFlow/IceFlow/IceFlow.vcxproj
@@ -141,10 +141,13 @@
     <ClInclude Include="src\Screens\DMFonts\segoeui9pt7b.h" />
     <ClInclude Include="src\Screens\MainScreen.h" />
     <ClInclude Include="src\Screens\OTAScreen.h" />
+    <ClInclude Include="src\Screens\Panels\GraphAutoScaler.h" />
+    <ClInclude Include="src\Screens\Panels\GraphItem.h" />
     <ClInclude Include="src\Screens\Panels\Icons\IconBase.h" />
     <ClInclude Include="src\Screens\Panels\Icons\IconBaseDto.h" />
     <ClInclude Include="src\Screens\Panels\Icons\ProfileIcon.h" />
     <ClInclude Include="src\Screens\Panels\Icons\SettingsIcon.h" />
+    <ClInclude Include="src\Screens\Panels\MS_GraphPanel.h" />
     <ClInclude Include="src\Screens\Panels\ProfileListItem.h" />
     <ClInclude Include="src\Screens\Panels\ProfileListItemDto.h" />
     <ClInclude Include="src\Screens\Panels\ProfileListPanel.h" />
@@ -183,9 +186,11 @@
     <ClCompile Include="src\ProfileManager\ProfileManager.cpp" />
     <ClCompile Include="src\Screens\MainScreen.cpp" />
     <ClCompile Include="src\Screens\OTAScreen.cpp" />
+    <ClCompile Include="src\Screens\Panels\GraphAutoScaler.cpp" />
     <ClCompile Include="src\Screens\Panels\Icons\IconBase.cpp" />
     <ClCompile Include="src\Screens\Panels\Icons\ProfileIcon.cpp" />
     <ClCompile Include="src\Screens\Panels\Icons\SettingsIcon.cpp" />
+    <ClCompile Include="src\Screens\Panels\MS_GraphPanel.cpp" />
     <ClCompile Include="src\Screens\Panels\ProfileListItem.cpp" />
     <ClCompile Include="src\Screens\Panels\ProfileListPanel.cpp" />
     <ClCompile Include="src\Screens\Panels\PS_ProfileGraphPanel.cpp" />
@@ -205,7 +210,7 @@
   </ImportGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties arduino.upload.port="192.168.50.30" config.Debug.customdebug_esp32_esp32_debugger_type="universal" />
+      <UserProperties arduino.upload.port="COM13" config.Debug.customdebug_esp32_esp32_debugger_type="universal" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
