--- a/Software/IceFlow/IceFlow/IceFlow.vcxproj
+++ b/Software/IceFlow/IceFlow/IceFlow.vcxproj
@@ -145,7 +145,9 @@
     <ClInclude Include="src\Screens\Panels\GraphItem.h" />
     <ClInclude Include="src\Screens\Panels\Icons\IconBase.h" />
     <ClInclude Include="src\Screens\Panels\Icons\IconBaseDto.h" />
+    <ClInclude Include="src\Screens\Panels\Icons\ManualHeatIcon.h" />
     <ClInclude Include="src\Screens\Panels\Icons\ProfileIcon.h" />
+    <ClInclude Include="src\Screens\Panels\Icons\ReflowIcon.h" />
     <ClInclude Include="src\Screens\Panels\Icons\SettingsIcon.h" />
     <ClInclude Include="src\Screens\Panels\MS_GraphPanel.h" />
     <ClInclude Include="src\Screens\Panels\ProfileListItem.h" />
@@ -188,7 +190,9 @@
     <ClCompile Include="src\Screens\OTAScreen.cpp" />
     <ClCompile Include="src\Screens\Panels\GraphAutoScaler.cpp" />
     <ClCompile Include="src\Screens\Panels\Icons\IconBase.cpp" />
+    <ClCompile Include="src\Screens\Panels\Icons\ManualHeatIcon.cpp" />
     <ClCompile Include="src\Screens\Panels\Icons\ProfileIcon.cpp" />
+    <ClCompile Include="src\Screens\Panels\Icons\ReflowIcon.cpp" />
     <ClCompile Include="src\Screens\Panels\Icons\SettingsIcon.cpp" />
     <ClCompile Include="src\Screens\Panels\MS_GraphPanel.cpp" />
     <ClCompile Include="src\Screens\Panels\ProfileListItem.cpp" />
@@ -210,7 +214,7 @@
   </ImportGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties arduino.upload.port="COM13" config.Debug.customdebug_esp32_esp32_debugger_type="universal" />
+      <UserProperties arduino.upload.port="192.168.50.30" config.Debug.customdebug_esp32_esp32_debugger_type="universal" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
