--- a/Software/IceFlow/IceFlow/~AutoRecover.IceFlow.vcxproj
+++ b/Software/IceFlow/IceFlow/~AutoRecover.IceFlow.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="src\Screens\Panels\Icons\IconBaseDto.h" />
     <ClInclude Include="src\Screens\Panels\Icons\ManualHeatIcon.h" />
     <ClInclude Include="src\Screens\Panels\Icons\ProfileIcon.h" />
+    <ClInclude Include="src\Screens\Panels\Icons\ReflowIcon.h" />
     <ClInclude Include="src\Screens\Panels\Icons\SettingsIcon.h" />
     <ClInclude Include="src\Screens\Panels\MS_GraphPanel.h" />
     <ClInclude Include="src\Screens\Panels\ProfileListItem.h" />
@@ -191,6 +192,7 @@
     <ClCompile Include="src\Screens\Panels\Icons\IconBase.cpp" />
     <ClCompile Include="src\Screens\Panels\Icons\ManualHeatIcon.cpp" />
     <ClCompile Include="src\Screens\Panels\Icons\ProfileIcon.cpp" />
+    <ClCompile Include="src\Screens\Panels\Icons\ReflowIcon.cpp" />
     <ClCompile Include="src\Screens\Panels\Icons\SettingsIcon.cpp" />
     <ClCompile Include="src\Screens\Panels\MS_GraphPanel.cpp" />
     <ClCompile Include="src\Screens\Panels\ProfileListItem.cpp" />
