--- a/Software/IceFlow/IceFlow/~AutoRecover.IceFlow.vcxproj
+++ b/Software/IceFlow/IceFlow/~AutoRecover.IceFlow.vcxproj
@@ -136,6 +136,10 @@
     <ClInclude Include="src\OvenController\OvenEnums.h" />
     <ClInclude Include="src\ProfileManager\Profile.h" />
     <ClInclude Include="src\ProfileManager\ProfileManager.h" />
+    <ClInclude Include="src\Screens\DialogBoxes\DialogBase.h" />
+    <ClInclude Include="src\Screens\DialogBoxes\DialogButton.h" />
+    <ClInclude Include="src\Screens\DialogBoxes\DialogButtonDto.h" />
+    <ClInclude Include="src\Screens\DialogBoxes\ManualHeatDlg.h" />
     <ClInclude Include="src\Screens\DMFonts\segoeui5pt7b.h" />
     <ClInclude Include="src\Screens\DMFonts\segoeui7pt7b.h" />
     <ClInclude Include="src\Screens\DMFonts\segoeui9pt7b.h" />
@@ -186,6 +190,9 @@
     <ClCompile Include="src\DisplayManager\src\DisplayQueue\DisplayManagerQueue.cpp" />
     <ClCompile Include="src\OvenController\OvenController.cpp" />
     <ClCompile Include="src\ProfileManager\ProfileManager.cpp" />
+    <ClCompile Include="src\Screens\DialogBoxes\DialogBase.cpp" />
+    <ClCompile Include="src\Screens\DialogBoxes\DialogButton.cpp" />
+    <ClCompile Include="src\Screens\DialogBoxes\ManualHeatDlg.cpp" />
     <ClCompile Include="src\Screens\MainScreen.cpp" />
     <ClCompile Include="src\Screens\OTAScreen.cpp" />
     <ClCompile Include="src\Screens\Panels\GraphAutoScaler.cpp" />
