--- a/Software/IceFlow/IceFlow/IceFlow.vcxproj
+++ b/Software/IceFlow/IceFlow/IceFlow.vcxproj
@@ -140,6 +140,8 @@
     <ClInclude Include="src\Screens\DialogBoxes\DialogButton.h" />
     <ClInclude Include="src\Screens\DialogBoxes\DialogButtonDto.h" />
     <ClInclude Include="src\Screens\DialogBoxes\ManualHeatDlg.h" />
+    <ClInclude Include="src\Screens\DialogBoxes\NumberPadDialogBox.h" />
+    <ClInclude Include="src\Screens\DialogBoxes\NumPadButton.h" />
     <ClInclude Include="src\Screens\DMFonts\segoeui5pt7b.h" />
     <ClInclude Include="src\Screens\DMFonts\segoeui7pt7b.h" />
     <ClInclude Include="src\Screens\DMFonts\segoeui9pt7b.h" />
@@ -193,6 +195,8 @@
     <ClCompile Include="src\Screens\DialogBoxes\DialogBase.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\DialogButton.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\ManualHeatDlg.cpp" />
+    <ClCompile Include="src\Screens\DialogBoxes\NumberPadDialogBox.cpp" />
+    <ClCompile Include="src\Screens\DialogBoxes\NumPadButton.cpp" />
     <ClCompile Include="src\Screens\MainScreen.cpp" />
     <ClCompile Include="src\Screens\OTAScreen.cpp" />
     <ClCompile Include="src\Screens\Panels\GraphAutoScaler.cpp" />
