--- a/Software/IceFlow/IceFlow/~AutoRecover.IceFlow.vcxproj
+++ b/Software/IceFlow/IceFlow/~AutoRecover.IceFlow.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="src\Screens\DMFonts\segoeui5pt7b.h" />
     <ClInclude Include="src\Screens\DMFonts\segoeui7pt7b.h" />
     <ClInclude Include="src\Screens\DMFonts\segoeui9pt7b.h" />
+    <ClInclude Include="src\Screens\EditProfileScreen.h" />
     <ClInclude Include="src\Screens\MainScreen.h" />
     <ClInclude Include="src\Screens\OTAScreen.h" />
     <ClInclude Include="src\Screens\Panels\GraphAutoScaler.h" />
@@ -199,6 +200,7 @@
     <ClCompile Include="src\Screens\DialogBoxes\MessageBox.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\NumberPadDialogBox.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\NumPadButton.cpp" />
+    <ClCompile Include="src\Screens\EditProfileScreen.cpp" />
     <ClCompile Include="src\Screens\MainScreen.cpp" />
     <ClCompile Include="src\Screens\OTAScreen.cpp" />
     <ClCompile Include="src\Screens\Panels\GraphAutoScaler.cpp" />
