--- a/Software/IceFlow/IceFlow/IceFlow.vcxproj.filters
+++ b/Software/IceFlow/IceFlow/IceFlow.vcxproj.filters
@@ -234,6 +234,9 @@
     <ClInclude Include="src\Screens\EditProfileScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Screens\DialogBoxes\KeyboardDialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DisplayManager\DisplayManager.cpp">
@@ -336,6 +339,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Screens\EditProfileScreen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Screens\DialogBoxes\KeyboardDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
