--- a/Software/IceFlow/IceFlow/IceFlow.vcxproj
+++ b/Software/IceFlow/IceFlow/IceFlow.vcxproj
@@ -139,6 +139,8 @@
     <ClInclude Include="src\Screens\DialogBoxes\DialogBase.h" />
     <ClInclude Include="src\Screens\DialogBoxes\DialogButton.h" />
     <ClInclude Include="src\Screens\DialogBoxes\DialogButtonDto.h" />
+    <ClInclude Include="src\Screens\DialogBoxes\KeyboardButton.h" />
+    <ClInclude Include="src\Screens\DialogBoxes\KeyboardButtonType.h" />
     <ClInclude Include="src\Screens\DialogBoxes\KeyboardDialog.h" />
     <ClInclude Include="src\Screens\DialogBoxes\ManualHeatDlg.h" />
     <ClInclude Include="src\Screens\DialogBoxes\MessageBox.h" />
@@ -197,6 +199,7 @@
     <ClCompile Include="src\ProfileManager\ProfileManager.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\DialogBase.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\DialogButton.cpp" />
+    <ClCompile Include="src\Screens\DialogBoxes\KeyboardButton.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\KeyboardDialog.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\ManualHeatDlg.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\MessageBox.cpp" />
