--- a/Software/IceFlow/IceFlow/IceFlow.vcxproj.filters
+++ b/Software/IceFlow/IceFlow/IceFlow.vcxproj.filters
@@ -243,6 +243,9 @@
     <ClInclude Include="src\Screens\DialogBoxes\KeyboardButtonType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\OvenController\AutoTune.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DisplayManager\DisplayManager.cpp">
